--- a/x5.plist
+++ b/x5.plist
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>X5 App download</string>
+				<string>LED控制系统</string>
 			</dict>
 		</dict>
 	</array>
